changes references from shouldijump to skydive.io

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ShouldIJump",
+  "name": "skydive.io",
   "version": "0.0.0",
   "description": "A webapp for quickly checking if the winds are safe for skydiving",
   "main": "index.html",
